Fix width of <pre> blocks on narrow devices (getting started and customizer) (Closes #536)

--- a/docs/_assets/customizer.css
+++ b/docs/_assets/customizer.css
@@ -61,6 +61,7 @@
 }
 .mdl-gen > .mdl-grid {
   max-width: 1280px;
+  padding: 0;
 }
 .mdl-gen__preview {
   position: relative;
